--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "doc"]
 	path = doc
-	url = https://github.com/ESP-rCommunity/ESP-rDoc.git
+	url = https://github.com/AGeissler/ESP-rDoc.git
 [submodule "data"]
 	path = data
-	url = https://github.com/ESP-rCommunity/ESP-rDatabases.git
+	url = https://github.com/AGeissler/ESP-rDatabases.git
 [submodule "models"]
 	path = models
-	url = https://github.com/ESP-rCommunity/ESP-rModels.git
+	url = https://github.com/AGeissler/ESP-rModels.git
