--- a/src/esrunet/Makefile
+++ b/src/esrunet/Makefile
@@ -7,6 +7,14 @@ CETCdir = $(SRCdir)/cetc
 PROG = enet$(EXE)
 default: $(PROG)
 
+architecture := $(shell uname -s)
+
+ifeq ($(architecture),Darwin)
+    SWTCH=
+else
+    SWTCH= -D
+endif
+
 .SUFFIXES: .o .F .c
 .F.o:
 	$(MFC) $(FFLAGS) -c $<
@@ -65,7 +73,7 @@ strip: $(PROG)
 	strip $(PROG)
 
 install: $(PROG)
-	install -D $(PROG) $(ESPBinDir)/$(PROG)
+	install $(SWTCH) $(PROG) $(ESPBinDir)/$(PROG)
 
 clean:
 	rm -f core $(PROG) $(PROG).exe $(MODULE_OBJECTS) $(OBJECTS) $(MODULES) \
