--- a/src/esruc2e/Makefile
+++ b/src/esruc2e/Makefile
@@ -3,6 +3,14 @@ SRCdir= `pwd`/..
 PROG = c2e$(EXE)
 default: $(PROG)
 
+architecture := $(shell uname -s)
+
+ifeq ($(architecture),Darwin)
+    SWTCH=
+else
+    SWTCH= -D
+endif
+
 .SUFFIXES: .o .F
 .F.o:
 	$(MFC) $(FFLAGS) -c $<
@@ -16,7 +24,7 @@ strip: $(PROG)
 	strip $(PROG)
 
 install: $(PROG)
-	install -D $(PROG) $(ESPBinDir)/$(PROG)
+	install $(SWTCH) $(PROG) $(ESPBinDir)/$(PROG)
 
 clean:
 	rm -f core $(PROG) $(PROG).exe $(OBJECTS)
