--- a/src/esrueco/Makefile
+++ b/src/esrueco/Makefile
@@ -11,6 +11,14 @@ BLDdir = $(SRCdir)/esrubld
 PROG= eco$(EXE)
 default: $(PROG)
 
+architecture := $(shell uname -s)
+
+ifeq ($(architecture),Darwin)
+    SWTCH=
+else
+    SWTCH= -D
+endif
+
 .SUFFIXES: .o .F
 .F.o:
 	$(MFC) $(FFLAGS) -c $<
@@ -147,7 +155,7 @@ strip: $(PROG)
 	strip $(PROG)
 
 install: $(PROG)
-	install -D $(PROG) $(ESPBinDir)/$(PROG)
+	install $(SWTCH) $(PROG) $(ESPBinDir)/$(PROG)
 
 clean:
 	rm -f core $(PROG) $(PROG).exe $(MODULE_OBJECTS) $(OBJECTS) $(MODULES) \
