--- a/src/esrumrt/Makefile
+++ b/src/esrumrt/Makefile
@@ -11,6 +11,14 @@ PROG = mrt$(EXE)
 PROG2 = espvwf$(EXE)
 default: $(PROG)
 
+architecture := $(shell uname -s)
+
+ifeq ($(architecture),Darwin)
+    SWTCH=
+else
+    SWTCH= -D
+endif
+
 .SUFFIXES: .o .F
 .F.o:
 	$(MFC) $(FFLAGS) -c $<
@@ -141,7 +149,7 @@ strip: $(PROG)
 	strip $(PROG)
 
 install: $(PROG)
-	install -D $(PROG) $(ESPBinDir)/$(PROG2)
+	install $(SWTCH) $(PROG) $(ESPBinDir)/$(PROG2)
 
 clean:
 	rm -f core $(PROG) $(PROG).exe $(MODULE_OBJECTS) $(OBJECTS) $(MODULES) \
