First set of changes to update to V13.3.2. Compile on OS X 10.13.6 O.K., no models tested. Note release note in regard to climate data and text mode (N.B. This development has necessitated reorganisation of the menus in clm and weather parameter selection in res. *** This will break existing scripts that automate these aspects of ESP-r.)!

--- a/src/eres/Makefile
+++ b/src/eres/Makefile
@@ -26,7 +26,7 @@ MODULE_OBJECTS = h3kmodule.o startup.o aim2_module.o CFC_Module.o
 
 OBJECTS = res.o arrow.o ascii_mat.o c2fdum.o castyp.o cfdat.o cfgrid.o cfutil.o cgd.o \
 	  comfort.o convect2.o ctread.o design.o dmdrep.o dossupport.o e3dviews.o \
-	  ecasctl.o CDBPlugins.o CDBCommon.o econstr.o econtrol.o \
+	  ecasctl.o CDBPlugins.o CDBCommon.o commonclm.o econstr.o econtrol.o \
 	  edatabase.o egeometry.o emfnetw.o enerbs.o enerbz.o enetmisc.o \
 	  enetrdisp.o enetres.o enetrewr.o eroper.o esru_misc.o esystem.o \
 	  filelist.o fabcon.o fabtmp.o fanger.o frqdis.o iaq.o initalc.o \
@@ -77,6 +77,9 @@ cfutil.F:
 cgd.F:
 	rm -f cgd.F
 	ln -s $(DFSdir)/cgd.F .
+commonclm.F:
+	rm -f commonclm.F
+	ln -s $(COMdir)/commonclm.F .
 convect2.F:
 	rm -f convect2.F
 	ln -s $(BLDdir)/convect2.F .
@@ -198,7 +201,7 @@ install:
 clean:
 	rm -f core $(PROG) $(PROG).exe $(MODULE_OBJECTS) $(OBJECTS) $(MODULES) \
 	aim2_module.F arrow.F ascii_mat.F c2fdum.F cfdat.F cfgrid.F cfutil.F \
-	cgd.F convect2.F ctread.F CDBPlugins.F CDBCommon.F \
+	cgd.F convect2.F ctread.F CDBPlugins.F CDBCommon.F commonclm.F \
 	dossupport.F e3dviews.F ecasctl.F econstr.F econtrol.F edatabase.F \
 	egeometry.F emfnetw.F enetmisc.F enetrewr.F eroper.F esru_misc.F \
 	esystem.F filelist.F fanger.F initalc.F item.F mfcdat.F mfutil.F nwkrewr.F pltcfg.F \
