--- a/src/cnv/Makefile
+++ b/src/cnv/Makefile
@@ -15,11 +15,12 @@ BLDdir = $(SRCdir)/ebld
 PROG = ecnv$(EXE)
 default: $(PROG)
 
-.SUFFIXES: .o .F
+.SUFFIXES: .o .F .f90
 .F.o:
 	$(MFC) $(FFLAGS) -c $<
-
-%.o : %.f90
+.f90.o:
+	$(MFC) $(FFLAGS) -c $<
+.o :
 	$(MCC) $(FFLAGS) -c $<
 
 MODULE_OBJECTS = h3kmodule.o startup.o aim2_module.o CFC_Module.o
@@ -63,7 +64,7 @@ c2fdum.F:
 	ln -s $(COMdir)/c2fdum.F .
 ctlwrt.F:
 	rm -f ctlwrt.F
-	ln -s $(PRJdir)/ctlwrt.F .
+	ln -s $(COMdir)/ctlwrt.F .
 ctread.F:
 	rm -f ctread.F
 	ln -s $(COMdir)/ctread.F .
